# HirePilot

./: .gitignore  API_KEY_CONFIGURATION.md  README.md  app.py  requirements.txt  script.py  tailor_resume.py  vercel.json
backend/: README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/: tailor_resume.py
backend/app/models/: job_models.py
backend/app/routes/: extension.py  jobs.py  resume.py  upload.py
backend/app/services/: job_service.py  resume_service.py
chrome-extension/: README.md  background.js  content-script.js  content-styles.css  manifest.json  popup.css  popup.html  popup.js
chrome-extension/icons/: README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/apply/: page.tsx
frontend/app/config/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ApiKeyCheck.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  JobResults.tsx  JobSearchForm.tsx  ResumeEditor.tsx
frontend/components/ui/: textarea.tsx
frontend/lib/: api.ts  utils.ts
frontend/services/: api.ts
frontend/types/: api.ts
frontend/utils/: apiFunctions.ts  apiKeys.ts
hirepilot-backend/: main.py  requirements.txt
hirepilot-backend/app/routes/: jobs.py  upload.py
hirepilot-frontend/app/upload/: page.tsx
hirepilot-frontend/utils/: apiFunctions.ts
