[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
    "google-generativeai>=0.8.3",
    "reportlab>=4.2.5",
    "gunicorn>=23.0.0",
]
